[project]
name = "yamyam-test"
version = "0.1.0"
description = "A simple test project"
authors = [
    {name = "bohyunshin"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
